tests/parser/statement_while_err3.mtp
begin

	(* while statement: missing while *)
	10 do
		sample := sample + 1
end
.